# bevy-ffrpg

./: guide.md  tauri_compile_errors.md
vanadiel_rpg/: .gitignore  Cargo.toml  README.md
vanadiel_rpg/.github/workflows/: ci.yml
vanadiel_rpg/docs/: agents.md  design.md  world_lore.toml
vanadiel_rpg/game/: Cargo.toml
vanadiel_rpg/game/assets/data/: gear_mods.toml  skillchain_examples.toml  skillchain_table.toml  spells.toml  weapon_skills.toml
vanadiel_rpg/game/assets/dialogue/: alynna.txt  child.txt  elder.txt  goblin.txt  guard.txt  shopkeeper.txt
vanadiel_rpg/game/assets/quests/: quest_001_skillchain.toml  tutorial_herb.ron
vanadiel_rpg/game/src/: main.rs
vanadiel_rpg/game/src/combat/: components.rs  mod.rs  skill_tables.rs  systems.rs  ui.rs
vanadiel_rpg/game/src/plugins/: combat.rs  core.rs  hardware_info.rs  interaction.rs  loading.rs  lore.rs  map.rs  mod.rs  movement.rs  quest.rs  sprite.rs  starter_area.rs  ui.rs
vanadiel_rpg/scripts/: fetch_assets.sh  pre_commit.sh
vanadiel_rpg/tests/: skillchain.rs
