[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.16"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
anyhow = "1"
rand = "0.8"
toml = "0.8"
smallvec = "1.11"
once_cell = "1.19"

[features]
default = []
